--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-modernist
+theme: jekyll-theme-hacker
 title: Welcome to Bkoconnell's homepage!
 description: Feel free to bookmark this to keep an eye on my project updates.
